src/objects/Respuestas__c.object
<CustomObject>
    <fields>
        <fullName>date_eval__c</fullName>
        <label>date_eval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>date_output__c</fullName>
        <label>date_output</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>date_start__c</fullName>
        <label>date_start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>date_stop__c</fullName>
        <label>date_stop</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>id_candidate__c</fullName>
        <label>id_candidate</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id_similar__c</fullName>
        <label>id_similar</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id_survival__c</fullName>
        <label>id_survival</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id_usuario__c</fullName>
        <label>id_usuario</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is_duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_no_duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is_no_duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>selected_fields__c</fullName>
        <label>selected_fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Respuesta</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>date_eval__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <nameField>
        <displayFormat>A{0000000}</displayFormat>
        <label>Nombre de Respuesta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Respuestas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>